--- a/my-angular-app/src/app/app-components/nav-bar/nav-bar.component.html
+++ b/my-angular-app/src/app/app-components/nav-bar/nav-bar.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
+<nav
+  class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark"
+  *ngIf="authorized"
+>
   <a class="navbar-brand" href="#">E & L</a>
   <button
     class="navbar-toggler"
