connect to Account.API

--- a/my-angular-app/src/app/account/account-info/account-info.component.html
+++ b/my-angular-app/src/app/account/account-info/account-info.component.html
@@ -42,6 +42,7 @@
                 ></a>
               </p>
             </div>
+            <small (click)="logout()">Quit</small>
           </div>
         </div>
       </li>
