--- a/my-angular-app/src/app/app-components/nav-bar/nav-bar.component.scss
+++ b/my-angular-app/src/app/app-components/nav-bar/nav-bar.component.scss
@@ -73,6 +73,11 @@
     font-size: 87px;
 }
 
+.padding{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 @media (min-width: 768px) {
   .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link {
     text-align: center;
