--- a/my-angular-app/src/app/app.component.html
+++ b/my-angular-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-accout-container></app-accout-container>
 
-<app-nav-bar></app-nav-bar>
+<app-body-container></app-body-container>
 
 <router-outlet></router-outlet>
