Add transaction validations: client

--- a/my-angular-app/src/app/transaction/add-transaction/add-transaction.component.html
+++ b/my-angular-app/src/app/transaction/add-transaction/add-transaction.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="transactionForm">
 <input type="number" formControlName="accountId">
 <input type="number" formControlName="amount">
-<button>add transaction</button>
+<button (click)="addNewTransaction()"> transaction</button>
 </form>
