convert UTC date to locale

--- a/my-angular-app/src/app/account/account-info/account-info.component.html
+++ b/my-angular-app/src/app/account/account-info/account-info.component.html
@@ -23,7 +23,7 @@
               <p class="text-left small">{{ account?.email }}</p>
               <p class="text-left">
                 <a href="#" class="btn btn-secondary btn-block btn-sm">{{
-                  " since: " + (account?.openDate | date: "shortDate")
+                  " since: " + (account?.openDate | date: "short":"+600")
                 }}</a>
               </p>
             </div>
