--- a/my-angular-app/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/my-angular-app/src/app/main-components/nav-bar/nav-bar.component.html
@@ -53,7 +53,9 @@
           Actions
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="transaction/add-transaction"
+            >Transaction</a
+          >
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
