--- a/my-angular-app/src/app/main-components/body-container/body-container.component.scss
+++ b/my-angular-app/src/app/main-components/body-container/body-container.component.scss
@@ -2,4 +2,7 @@ app-my-footer{
     position: absolute;
     bottom: -300px;
     width: 100%;
+    @media (max-width: 768px){
+        bottom: -920px;
+    }
 }
