--- a/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
+++ b/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
@@ -115,5 +115,11 @@
     &nbsp;&nbsp;
     <a href="#">Home >></a>
   </div>
+  <div
+    class="spinner-border text-primary middle"
+    role="status"
+    *ngIf="loading == true"
+  >
+    <span class="sr-only">Loading...</span>
+  </div>
 </div>
-<footer></footer>
