--- a/my-angular-app/src/app/app.component.html
+++ b/my-angular-app/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-accout-container></app-accout-container>
 
-<app-body-container></app-body-container>
-
-<router-outlet></router-outlet>
+<!-- <app-body-container></app-body-container> -->
+<div *ngIf="authorized">
+  <app-nav-bar></app-nav-bar>
+  <router-outlet></router-outlet>
+  <app-my-footer></app-my-footer>
+</div>
