--- a/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.scss
+++ b/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.scss
@@ -8,8 +8,6 @@
     width: 800px;
     margin: auto;
     margin-top: 100px;
-    // display:flex; 
-    // flex-direction:column; 
     position: relative;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -22,6 +20,7 @@
     width: 290px;
   }
 
-  footer{
-    height: 400px;
-  }
+.middle{
+    padding: auto;
+    margin-left: 48%;
+}
