--- a/my-angular-app/src/app/modules/account/account-info/account-info.component.html
+++ b/my-angular-app/src/app/modules/account/account-info/account-info.component.html
@@ -1,54 +1,45 @@
-<ul class="nav navbar-nav navbar-right" *ngIf="!loading">
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      <span class="glyphicon glyphicon-user"></span> 
-      <strong>{{ account?.firstName }}</strong>
-      <span class="glyphicon glyphicon-chevron-down"></span>
-    </a>
-    <ul class="dropdown-menu dropdown-menu-right">
-      <li>
-        <div class="navbar-login">
-          <div class="row">
-            <div class="col-lg-4">
-              <p class="text-center">
-                <i class="fa-solid fa-user-large icon-size"></i>
-              </p>
-            </div>
-            <div class="col-lg-8">
-              <p class="text-left s">
-                <strong>{{
-                  account?.firstName + " " + account?.lastName
-                }}</strong>
-              </p>
-              <p class="text-left small">{{ account?.email }}</p>
-              <p class="text-left">
-                <a href="#" class="btn btn-secondary btn-block btn-sm">{{
-                  " since: " + (account?.openDate | date: "short":"+600")
-                }}</a>
-              </p>
-            </div>
+<div *ngIf="!loading">
+  <li>
+    <div class="navbar-login">
+      <div class="row">
+        <div class="col-lg-4">
+          <p class="text-center">
+            <i class="fa-solid fa-user-large icon-size"></i>
+          </p>
+        </div>
+        <div class="col-lg-8">
+          <p class="text-left s">
+            <strong>{{ account?.firstName + " " + account?.lastName }}</strong>
+          </p>
+          <p class="text-left small">{{ account?.email }}</p>
+          <div *ngIf="private">
+            <p class="text-left">
+              <a href="#" class="btn btn-secondary btn-block btn-sm">{{
+                " since: " + (account?.openDate | date: "short":"+600")
+              }}</a>
+            </p>
           </div>
         </div>
-      </li>
-      <li class="divider"></li>
-      <li>
-        <div class="navbar-login navbar-login-session">
-          <div class="row">
-            <div class="col-lg-12">
-              <p>
-                <a href="#" class="btn btn-primary btn-block"
-                  >{{ "balance: " + account?.balance
-                  }}<i class="fas fa-dollar-sign"></i
-                ></a>
-              </p>
-            </div>
-            <small (click)="logout()">Quit</small>
-          </div>
-        </div>
-      </li>
-    </ul>
+      </div>
+    </div>
   </li>
-</ul>
+  <li class="divider"></li>
+  <li *ngIf="private">
+    <div class="navbar-login navbar-login-session">
+      <div class="row">
+        <div class="col-lg-12">
+          <p>
+            <a href="#" class="btn btn-primary btn-block"
+              >{{ "balance: " + account?.balance
+              }}<i class="fas fa-dollar-sign"></i
+            ></a>
+          </p>
+        </div>
+        <small (click)="logout()">Quit</small>
+      </div>
+    </div>
+  </li>
+</div>
 
 <ul class="nav navbar-nav navbar-right" *ngIf="loading">
   <div class="spinner-border text-primary" role="status">
