--- a/my-angular-app/src/app/modules/main-components/nav-bar/nav-bar.component.html
+++ b/my-angular-app/src/app/modules/main-components/nav-bar/nav-bar.component.html
@@ -58,7 +58,9 @@
           >
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="operation/operations-history"
+            >Operations history</a
+          >
         </div>
       </li>
     </ul>
@@ -80,7 +82,21 @@
         </a>
       </li>
     </ul> -->
-    <app-account-info></app-account-info>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <span class="glyphicon glyphicon-user"></span> 
+          <strong>{{ "Your Account" }}</strong>
+          <span class="glyphicon glyphicon-chevron-down"></span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-right">
+          <app-account-info
+            [accountID]="accountID"
+            [private]="true"
+          ></app-account-info>
+        </ul>
+      </li>
+    </ul>
     <!-- <form class="form-inline my-2 my-lg-0">
       <input
         class="form-control mr-sm-2"
