--- a/my-angular-app/src/app/modules/operation/operations-history/operations-history.component.html
+++ b/my-angular-app/src/app/modules/operation/operations-history/operations-history.component.html
@@ -13,11 +13,11 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>amount</th>
         <td mat-cell *matCellDef="let row">
-          <span id="isCredit" *ngIf="row.isCredit">{{
-            "+ " + row.amount
+          <span id="isCredit" *ngIf="row.credit">{{
+            "+ " + row.transactionAmount
           }}</span>
-          <span id="isDedit" *ngIf="!row.isCredit">{{
-            "- " + row.amount
+          <span id="isDedit" *ngIf="!row.credit">{{
+            "- " + row.transactionAmount
           }}</span>
         </td>
       </ng-container>
@@ -32,7 +32,7 @@
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>date</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.date | date: "shortDate" }}
+          {{ row.operationTime | date: "shortDate" }}
         </td>
       </ng-container>
 
@@ -74,7 +74,7 @@
           >
             <div class="example-element-diagram">
               <app-account-info
-                [accountID]="element.secondSideId"
+                [accountID]="element.secondSideAccountId"
               ></app-account-info>
             </div>
           </div>
