--- a/my-angular-app/src/app/modules/account/login/login.component.html
+++ b/my-angular-app/src/app/modules/account/login/login.component.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="alert alert-danger" *ngIf="errors">
-      <strong>Error!</strong> Email and Password are requiered.
+      <strong>Error!</strong> {{ errorMessage }}
     </div>
     <br />
   </div>
