--- a/my-angular-app/src/app/modules/account/account-info/account-info.component.html
+++ b/my-angular-app/src/app/modules/account/account-info/account-info.component.html
@@ -29,7 +29,9 @@
       <div class="row">
         <div class="col-lg-12">
           <p>
-            <a href="#" class="btn btn-primary btn-block"
+            <a
+              href="operation/operations-history"
+              class="btn btn-primary btn-block"
               >{{ "balance: " + account?.balance
               }}<i class="fas fa-dollar-sign"></i
             ></a>
