Add email verification : client

--- a/my-angular-app/src/app/modules/account/register/register.component.scss
+++ b/my-angular-app/src/app/modules/account/register/register.component.scss
@@ -12,3 +12,13 @@ small:hover{
     padding: auto;
     margin-left: 48%;
 }
+
+.emailVerification{
+    background-color:gray;
+
+}
+
+.varification:click{
+    visibility: hidden;
+
+}
