--- a/my-angular-app/src/app/modules/account/register/register.component.html
+++ b/my-angular-app/src/app/modules/account/register/register.component.html
@@ -43,14 +43,18 @@
           </div>
         </div>
       </div>
-      <div class="form-group">
+      <div 
+      class="form-group"  >
         <label>Email</label>
         <input
           type="text"
           formControlName="email"
           class="form-control"
           [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
+          
         />
+       
+        
         <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
           <div *ngIf="f['email'].errors['required']">Email is required</div>
           <div *ngIf="f['email'].errors['email']">
@@ -151,4 +155,21 @@
   *ngIf="loading == true"
 >
   <span class="sr-only">Loading...</span>
+</div>
+
+
+<div class="emailVerification">
+  <div class="buttonDiv" *ngIf="buttonVisable">
+  <button class="varification" class="btn btn-primary mr-1" (click)="sendEmail()">Send varification code</button>
+  </div>
+  <div class="inputDiv" *ngIf="buttonVisable">
+  <p>We sent a varification sent to:</p>
+  <input type="digits" maxlength="4" (click)="checkCode($event)" >
+  <a (click)="sendEmail()"> <small>Send code again</small></a>
+  </div>
+  <div *ngIf="!success">
+  <p >Verification completed successfully</p>
+  <br>
+  <i id="vIcon" class="fa-solid fa-circle-check fa-5x"></i>
+  </div>
 </div>
