--- a/my-angular-app/src/app/modules/account/register/register.component.scss
+++ b/my-angular-app/src/app/modules/account/register/register.component.scss
@@ -1,3 +1,9 @@
+.container{
+    width: 535px;
+    margin: auto;
+    margin-top: 100px;
+}
+
 small{
     color: var(--bs-link-color);
     text-decoration: underline;
@@ -20,5 +26,34 @@ small:hover{
 
 .varification:click{
     visibility: hidden;
-
 }
+
+.verification-btn{
+    height: min-content;
+    margin: auto;
+    margin-top: 31.5px;
+}
+
+.center{
+    margin: auto;
+}
+
+#partitioned {
+    letter-spacing: 34px;
+    border: 0;
+    background-image: linear-gradient(to left, black 70%, rgba(255, 255, 255, 0) 0%);
+    background-position: bottom;
+    background-size: 45px 1px;
+    background-repeat: repeat-x;
+    background-position-x: 35px;
+    width: 250px;
+  }
+  
+  #divInner{
+    left: 0;
+    position: sticky;
+  }
+  
+  #divOuter{
+    overflow: hidden;
+  }
