--- a/my-angular-app/src/app/modules/account/register/register.component.scss
+++ b/my-angular-app/src/app/modules/account/register/register.component.scss
@@ -57,3 +57,13 @@ small:hover{
   #divOuter{
     overflow: hidden;
   }
+
+  .resend-button{
+    border-radius: 50%;
+    margin-left: 12px;
+    margin-top: 50%;
+  }
+
+  .alert{
+    width: 100%;
+  }
