--- a/my-angular-app/src/app/modules/account/register/register.component.html
+++ b/my-angular-app/src/app/modules/account/register/register.component.html
@@ -68,14 +68,14 @@
             class="btn btn-primary verification-btn"
             (click)="sendEmail()"
             *ngIf="!EmailSent && !verificationLoading"
+            [disabled]="f['email'].errors"
           >
             Send verification code
           </button>
-
           <div
             class="form-group col-5 code"
             id="divOuter"
-            *ngIf="EmailSent && !verificationLoading"
+            *ngIf="EmailSent && !verificationLoading && !sendingEmailError"
           >
             <label>Verification Code</label>
             <div id="divInner">
@@ -89,6 +89,7 @@
                 onKeyPress="if(this.value.length==4) return false;"
               />
             </div>
+
             <div *ngIf="submitted && f['code'].errors" class="invalid-feedback">
               Verification code is required
             </div>
@@ -101,9 +102,34 @@
           >
             <span class="sr-only">Loading...</span>
           </div>
+
+          <div
+            class="form-group col-2"
+            *ngIf="!verificationLoading && EmailSent"
+          >
+            <button
+              class="btn btn-warning resend-button"
+              (click)="sendEmail()"
+              title="resend email"
+            >
+              <i class="fa fa-repeat" aria-hidden="true"></i>
+            </button>
+          </div>
+
+          <div class="alert alert-danger" *ngIf="sendingEmailError">
+            <svg
+              class="bi flex-shrink-0 me-2"
+              width="24"
+              height="24"
+              role="img"
+              aria-label="Danger:"
+            >
+              <use xlink:href="#exclamation-triangle-fill" />
+            </svg>
+            <strong>Error!</strong> Could'nt send an email to the given address.
+          </div>
         </div>
         <div class="form-row">
-          {{ "f: " + f["password"].errors?.["required"] }}
           <div class="form-group col">
             <label>Password</label>
             <input
