present correlated errors : server & client

--- a/my-angular-app/src/app/modules/account/account-info/account-info.component.html
+++ b/my-angular-app/src/app/modules/account/account-info/account-info.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!loading">
+<div *ngIf="!loading && !error">
   <li>
     <div class="navbar-login">
       <div class="row">
@@ -48,3 +48,16 @@
     <span class="sr-only">Loading...</span>
   </div>
 </ul>
+
+<div class="alert alert-danger" *ngIf="error">
+  <svg
+    class="bi flex-shrink-0 me-2"
+    width="24"
+    height="24"
+    role="img"
+    aria-label="Danger:"
+  >
+    <use xlink:href="#exclamation-triangle-fill" />
+  </svg>
+  <strong>Error!</strong> {{ error }}
+</div>
