--- a/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
+++ b/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
@@ -60,7 +60,7 @@
   <div
     class="alert alert-danger d-flex align-items-center"
     role="alert"
-    *ngIf="showError"
+    *ngIf="error"
   >
     <svg
       class="bi flex-shrink-0 me-2"
