--- a/my-angular-app/src/app/modules/operation/operations-history/operations-history.component.html
+++ b/my-angular-app/src/app/modules/operation/operations-history/operations-history.component.html
@@ -13,11 +13,11 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>amount</th>
         <td mat-cell *matCellDef="let row">
-          <span id="isCredit" *ngIf="row.credit">{{
-            "+ " + row.transactionAmount
-          }}</span>
+          <span id="isCredit" *ngIf="row.credit"
+            >{{ "+ " + row.transactionAmount / 100 }}
+          </span>
           <span id="isDedit" *ngIf="!row.credit">{{
-            "- " + row.transactionAmount
+            "- " + row.transactionAmount / 100
           }}</span>
         </td>
       </ng-container>
@@ -25,14 +25,14 @@
       <!-- balance Column -->
       <ng-container matColumnDef="balance">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>balance</th>
-        <td mat-cell *matCellDef="let row">{{ row.balance }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.balance / 100 }}</td>
       </ng-container>
 
       <!-- date Column -->
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>date</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.operationTime | date: "shortDate" }}
+          {{ row.operationTime | date: "short":"+600" }}
         </td>
       </ng-container>
 
