update SendEmailTrack flow : server & client

--- a/my-angular-app/src/app/modules/account/register/register.component.html
+++ b/my-angular-app/src/app/modules/account/register/register.component.html
@@ -126,7 +126,7 @@
             >
               <use xlink:href="#exclamation-triangle-fill" />
             </svg>
-            <strong>Error!</strong> Could'nt send an email to the given address.
+            <strong>Error!</strong> {{ sendingEmailError }}
           </div>
         </div>
         <div class="form-row">
