--- a/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
+++ b/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
@@ -86,11 +86,11 @@
       </svg>
       <div><strong>Success!</strong> Your application is being processed.</div>
     </div>
-    <a href="transaction/add-transaction" (click)="transferNext()"
+    <a routerLink="transaction/add-transaction" (click)="transferNext()"
       >To transfer next >></a
     >
     &nbsp;&nbsp;
-    <a href="#">Home >></a>
+    <a routerLink="#">Home >></a>
   </div>
   <div
     class="spinner-border text-primary middle"
