update Home routerLink : client

--- a/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
+++ b/my-angular-app/src/app/modules/transaction/add-transaction/add-transaction.component.html
@@ -90,7 +90,7 @@
       >To transfer next >></a
     >
     &nbsp;&nbsp;
-    <a routerLink="#">Home >></a>
+    <a routerLink="/">Home >></a>
   </div>
   <div
     class="spinner-border text-primary middle"
